# cc-web-chat

./: .env.example  .gitignore  CLAUDE.md  README.md  REQUIREMENTS.md  claude_chat.html  claude_chat_server.py  pyproject.toml  requirements.txt
claude_code_chat/: CLAUDE.md  __init__.py  claude_chat.html  server.py
